# TIL

./: test.txt
DduDu-Toy/: README.md
DduDu-Toy/Auth/: build.gradle
DduDu-Toy/Eureka/: build.gradle
DduDu-Toy/Todo/: build.gradle
DduDu-Toy/Zuul/: build.gradle
Golang/FirstProject/: first.go  go.mod  main.go  second.go  third.go
Java/BoardWeb/: pom.xml
Java/BoardWeb2/: pom.xml
Java/BoardWeb3/: pom.xml
Java/BoardWeb4/: pom.xml
Java/BootJPAStudyProject/: build.gradle
Java/BootStudyProject/: build.gradle
Java/ChallengeSemesterSystem/: pom.xml
Java/GDG-Study/: README.md
Java/JWTStudyProject/: pom.xml
Java/JavaStudyProject/: README.md
Java/MybatisSpringStudy/: pom.xml
Java/ReviewSpring/: build.gradle
Java/SecurityStudyProject/: pom.xml
Java/SecurityStudyProject2/: pom.xml
Java/SpringStudyProject/: pom.xml
Java/demo/: .gitignore  build.gradle
Java/oauth/: .gitignore  build.gradle
Kotlin/First-kotlin/: build.gradle.kts  settings.gradle.kts
MSA/auth/: build.gradle
MSA/eureka/: build.gradle
MSA/order/: build.gradle
MSA/zuul/: build.gradle
Next/first-project/: package.json
Next/second-project/: package.json
Python/BigdataLecture/: covid_genome_main.py  main.py
Python/First/: PCA_study.py  Perceptron.py  bottom_deep.py  bottom_deep2.py  bottom_deep3.py  corona_daily.csv  corona_rnn.py  iris_logistic_regression.py  iris_plt_test.py  kernel_PCA.py  kernel_svm_study.py  main.py  mnist_deeplearning.py  mnist_gan.py  score.csv  (+8 more)
Rust/TideStudyProject/: Cargo.toml  README.md  index.html
Rust/TideStudyProject/src/: main.rs
(+551 files in other folders)
