[package]
name = "tide_study_project"
version = "0.1.0"
authors = ["CJW-MAPU <c.j.biz.woong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.6.0"
async-std = { version = "1.5", features = ["attributes"] }
futures-util = "0.3.1"
http = "0.2.1"
cookie = "0.12.0"
futures = "0.3.1"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
serde_qs = "0.5.0"
serde_derive = "1.0.106"
quote = "1.0"
proc-macro2 = "1.0"